# distributed_experiment_proj

./: .gitignore  pyproject.toml  readme.md
distributed_experiment/: cli.py  server.py  worker.py
