[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-experiment"
version = "0.1.0"
description = "A lightweight distributed job queue system with worker heartbeat monitoring and a Typer CLI"
readme = "readme.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Tomoyuki", email = "tomoyuki@example.com"}
]
keywords = [
    "distributed",
    "job-queue",
    "worker",
    "fastapi",
    "parallel-processing"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/distributed-experiment"
Repository = "https://github.com/yourusername/distributed-experiment.git"
Issues = "https://github.com/yourusername/distributed-experiment/issues"

[project.scripts]
distributed-experiment = "distributed_experiment.cli:main"

[tool.setuptools]
packages = ["distributed_experiment"]
package-dir = {"" = "."}

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=distributed_experiment --cov-report=term-missing"
